--- a/vue-e/sellApp/src/common/style/mixin.less
+++ b/vue-e/sellApp/src/common/style/mixin.less
@@ -1,11 +1,19 @@
 .maxin-1px(@color){
 	position: relative;
-	:after{
+	&:after{
 		display: block;
 		position: absolute;
 		left: 0;
 		bottom: 0;
+		width: 100%;
 		border-top: 1px solid @color;
-		content: '';
+		content: ' ';
+	}
+}
+
+.bg-image(@url){
+	background-image: url('../../components/head/@{url}@2x.png');
+	@media (-webkit-min-device-pixel-ratio: 3),(min-device-pixel-ratio: 3){
+		background-image: url('../../components/head/@{url}@3x.png');
 	}
 }
